--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^4.2",
+        "psr/log": "^1.1",
+        "symfony/console": "^4.2"
     }
 }
